manifests/react-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
        - name: react-ui
          image: ghcr.io/cynicdog/spa-spring-keycloak-oauth2/react-ui:latest
          ports:
            - containerPort: 4173
---
apiVersion: v1
kind: Service
metadata:
  name: react-ui
spec:
  selector:
    app: react-ui
  ports:
    - protocol: TCP
      port: 4173
      targetPort: 4173
